2014-03-27 Matt:
	* Adding Shower profile script

2014-03-25 Matt:
	* Updating Makefile and some code after debugging
	* Fixing Dim1.cxx for analytic parameterization. Mixed two papers got wrong result.

2014-03-20 Matt:
	* Updating README
	* Added runtime options for Analysis. Annoyed that I hadn't done it yet..

2014-03-19 Matt:
	* Adding TreeAnalyzer which can loop over simple trees made from G4 output
	* Adding plotting scripts to format first results
	* Tagging first version

2014-03-18 Matt:
	* Creating package in order to derive electric field from shower profiles.
	* Setting up structure
	* Skeleton of code added
	* First working version. Reproduced 100 GeV and 1TeV shower results.
	* Added Analytic calculation with some gaussian shower smearing